--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,14 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+Assets/Microgames/Spaceship/Animations/Rig.controller
+Assets/Microgames/Spaceship/Animations/Rig.controller
+Assets/Microgames/Spaceship/Animations/Rig.controller
+Assets/Microgames/Spaceship/Animations/SpaceshipJump.anim
+Assets/Microgames/Spaceship/Animations/SpaceshipVictory.anim
+Assets/Microgames/Spaceship/Animations/Rig.controller
+Assets/Microgames/Spaceship/Animations/SpaceshipJump.anim
+Assets/Microgames/Spaceship/Animations/Rig.controller
+Assets/Microgames/Spaceship/Animations/SpaceshipJump.anim
+Assets/Microgames/Spaceship/Animations/tiny patchy.controller
+Assets/Microgames/Spaceship/Animations/SpaceshipVictory.anim
